# Soar

./: .clang-format  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Config.cmake.in  ConstantMatchTest_Implementation_Complete.md  ConstantMatchTest_Implementation_Plan.md  ConstantMatchTest_Implementation_Record.md  Explainability-in-Soar.md  Kernel.doxyfile  README.md  SConstruct  SML.doxyfile  build.sh  conan-install.sh  conanfile.py  conanfile.txt  integration.sh  shell.nix
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: build.yml  cmake-multi-platform.yml
Core/CLI/: CommandLineInterface.cxx  cli_help_head.cpp
Core/CLI/src/: cli_Aliases.h  cli_CommandLineInterface.cpp  cli_CommandLineInterface.h  cli_Commands.h  cli_Options.h  cli_Parser.h  cli_alias.cpp  cli_chunk.cpp  cli_chunk.h  cli_debug.cpp  cli_decide.cpp  cli_decide.h  cli_echo.cpp  cli_enums.h  cli_epmem.cpp  cli_explain.cpp  cli_explain.h  cli_file_system_cmds.cpp  cli_gp.cpp  cli_help.cpp  cli_load_save.cpp  cli_load_save.h  cli_output.cpp  cli_output.h  cli_preferences.cpp  cli_print.cpp  cli_production.cpp  cli_production.h  cli_rl.cpp  cli_run.cpp  cli_smem.cpp  cli_soar.cpp  cli_soar.h  cli_sp.cpp  cli_stats.cpp  cli_svs.cpp  cli_trace.cpp  cli_trace.h  cli_visualize.cpp  cli_visualize.h  (+2 more)
Core/ClientSML/src/: sml_Client.h  sml_ClientAgent.cpp  sml_ClientAgent.h  sml_ClientAnalyzedXML.cpp  sml_ClientAnalyzedXML.h  sml_ClientDirect.h  sml_ClientErrors.cpp  sml_ClientErrors.h  sml_ClientEvents.h  sml_ClientFloatElement.cpp  sml_ClientFloatElement.h  sml_ClientIdentifier.cpp  sml_ClientIdentifier.h  sml_ClientIntElement.cpp  sml_ClientIntElement.h  sml_ClientKernel.cpp  sml_ClientKernel.h  sml_ClientStringElement.cpp  sml_ClientStringElement.h  sml_ClientTraceXML.cpp  sml_ClientTraceXML.h  sml_ClientWMElement.cpp  sml_ClientWMElement.h  sml_ClientWorkingMemory.cpp  sml_ClientWorkingMemory.h  sml_ClientXML.cpp  sml_ClientXML.h  sml_DeltaList.cpp  sml_DeltaList.h  sml_ListMap.h  sml_ObjectMap.cpp  sml_ObjectMap.h  sml_OutputDeltaList.cpp  sml_OutputDeltaList.h
Core/ClientSMLSWIG/: CMakeLists.txt  README.md
Core/ClientSMLSWIG/Python/: Python_sml_ClientInterface.i  pyproject.toml
Core/ClientSMLSWIG/Tcl/: pkgIndex_linux.tcl  pkgIndex_mac.tcl  pkgIndex_win.tcl
Core/ConnectionSML/: ConnectionSML.cxx
Core/ConnectionSML/src/: EmbeddedSMLInterface.h  sml_AnalyzeXML.cpp  sml_AnalyzeXML.h  sml_ArgMap.cpp  sml_ArgMap.h  sml_Connection.cpp  sml_Connection.h  sml_EmbeddedConnection.cpp  sml_EmbeddedConnection.h  sml_EmbeddedConnectionAsynch.cpp  sml_EmbeddedConnectionAsynch.h  sml_EmbeddedConnectionSynch.cpp  sml_EmbeddedConnectionSynch.h  (+56 more)
Core/ElementXML/: ElementXML.cxx
Core/SVS/: SVS.cxx
Core/SoarKernel/: SoarKernel.cxx
Core/shared/: Export.h  assert.cpp  assert.hpp  misc.h  portability.h  portability_posix.h  portability_windows.h  soar_TraceNames.h  soarversion.h  soarversion.h.in  tokenizer.h
Java/Debugger/: CMakeLists.txt  manifest1
Java/Debugger/src/edu/umich/soar/debugger/: MainFrame.java  SWTApplication.java
Java/Debugger/src/edu/umich/soar/debugger/manager/: MainWindow.java  Pane.java
PerformanceTests/: CMakeLists.txt  PerformanceTests.cpp  PerformanceTests.h
QtDebugger/: CMakeLists.txt  debugger.instructions.md
QtDebugger/src/: AgentWindow.cpp  AgentWindow.h  CommandWindow.cpp  CommandWindow.h  DocumentThread.cpp  DocumentThread.h  MainWindow.cpp  MainWindow.h  OutputWindow.cpp  OutputWindow.h  PreferencesWindow.cpp  PreferencesWindow.h  ProductionsWindow.cpp  ProductionsWindow.h  SoarAgent.cpp  SoarAgent.h  SoarDebugger.cpp  SoarDebugger.h  TracesWindow.cpp  TracesWindow.h  WorkingMemoryTree.cpp  WorkingMemoryTree.h  main.cpp
QtDebugger/ui/: AgentWindow.ui  CommandWindow.ui  MainWindow.ui  OutputWindow.ui  PreferencesWindow.ui  ProductionsWindow.ui  TracesWindow.ui  WorkingMemoryTree.ui
SoarCLI/: CMakeLists.txt  ansi_colors.h  soar_cli.cpp  soar_cli.h
Tcl/tcl/: slave.tcl
Tests/Debugger/: BUILD_QUICK.md  CMakeLists.txt  SpawnDebugger.cpp  conanfile.py
UnitTests/: CMakeLists.txt  SimpleJavaSMLTest.java  SimpleJavaScriptSMLTest.js  SoarUnitTests.cxx  TestExternalLibraryLib.cpp  testMain.cpp  test_java_sml.sh  test_javascript_sml.sh  test_python_sml.py
UnitTests/SoarHelpers/: SoarHelper.cpp  SoarHelper.hpp  msdirent.h  portable-dirent.h
UnitTests/SoarTestAgents/529-justification-bug/: README.md
UnitTests/SoarTestAgents/Chunking/tests/: ChunkingTests_Constant_Match_Literalization.soar
UnitTests/SoarUnitTests/: AgentTest.cpp  AgentTest.hpp  AliasTest.cpp  AliasTest.hpp  BasicTests.cpp  BasicTests.hpp  BuiltinRHSTests.cpp  BuiltinRHSTests.hpp  ChunkingDemoTests.cpp  ChunkingDemoTests.hpp  ChunkingTests.cpp  ChunkingTests.hpp  DebuggerTest.cpp  DebuggerTest.hpp  ElementXMLTest.cpp  ElementXMLTest.hpp  EpMemFunctionalTests.cpp  EpMemFunctionalTests.hpp  ExternalLibraryTest.cpp  ExternalLibraryTest.hpp  FullTests.cpp  FullTests.hpp  FullTestsClientThread.hpp  FullTestsClientThreadFullyOptimized.hpp  FullTestsRemote.hpp  FunctionalTestHarness.cpp  FunctionalTests.cpp  FunctionalTests.hpp  IOTests.cpp  IOTests.hpp  MiscTests.cpp  MiscTests.hpp  MultiAgentTest.cpp  MultiAgentTest.hpp  SMemFunctionalTests.cpp  SMemFunctionalTests.hpp  SimpleListener.cpp  SimpleListener.hpp  SvsTests.cpp  SvsTests.hpp  (+4 more)
UnitTests/SoarUnitTests/wma/: WmaFunctionalTests.cpp  WmaFunctionalTests.hpp
UnitTests/TestHarness/: ExampleTests.cpp  ExampleTests.hpp  FunctionalTestHarness.cpp  FunctionalTestHarness.hpp  TestCategory.hpp  TestHelpers.cpp  TestHelpers.hpp  TestRunner.cpp  TestRunner.hpp  testMain.cpp  unistd_windows.h
build_support/: tcl.py
cmake/: Packing.cmake
docs/: operator-explanation.md  sml-xml-command-catalog.json  sml-xml-command-catalog.schema.json  sml-xml-remote-protocol.md
scripts/: sml_socket_probe.py
tests/: CMakeLists.txt
tests/Integration/: CMakeLists.txt  integration.cpp
tests/UnitTests/: IdentifierExceptionTests.cpp  OperatorExplanationTests.cpp
(+626 files in other folders)
